feat: get all users and sellers
